--- a/bancoapp/web/style.css
+++ b/bancoapp/web/style.css
@@ -9,6 +9,7 @@ body {
 
 
 header {
+    /*aquí va el h1 del AGUILA REAL*/
     letter-spacing: 10px;
     font-family: Georgia, 'Times New Roman', Times, serif;
     background-color: #7e8e7ef9;
@@ -16,7 +17,27 @@ header {
     text-align: center;
     padding: 10px 0;
 }
+/*Principio del formulario*/
+form {
+    width: 160px;
+    height: 500px;
+    background-color: #1e9002;
+    padig-top: 30px;
+    margin: 70px auto;
+}
 
+h4{
+    
+}
+h6{
+    color: #027290;
+    text-aling: right;
+}
+
+input{}
+label{}
+
+/*Fin del diseño de formulario*/
 footer {
     font-family: Arial, Helvetica, sans-serif;
     background-color: #8d938f;
