--- a/bancoapp/web/style.css
+++ b/bancoapp/web/style.css
@@ -22,11 +22,17 @@ header {
 /*Principio del formulario*/
 form {
     font-family: Arial, Helvetica, sans-serif;
-    width: 160px;
-    height: 200px;
+    width: 300px;
+    height: 300px;
     background-color: #59cc7f;
-    padig-top: 30px;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
     margin: 70px auto;
+    box-shadow: -10px 10px 20px 15px #3a3333;
 }
 
 /*Todolos los h */
@@ -43,26 +49,42 @@ h4 {
 }
 
 h6 {
-    color: #15acd6;
+    color: #0f414f;
     box-sizing: right;
 }
 
 /*Fin de los h*/
 input {
-    width: 100%;
+    width: 70%;
     padding: 10px;
-    margin: 5px 0 20px 0;
+    margin: 25px 25px 25px 25px;
     border: none;
     background: #f1f1f1;
     border-radius: 5px;
+    display: flex;
+}
+
+input[type="button"] {
+    width: 50%;
+    margin: auto;
+    background-color: #59cc7f;
+    color: #0a0a0a;
+    border: none;
+    cursor: pointer;
+}
+
+input[type="button"]:hover {
+    background-color: #0a0a0a;
+    color: #59cc7f;
 }
 
 label {
-    color: #0a0a0a;
-    font-size: 20px;
-    font-weight: bold;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 16px;
+    color: #110627;
+    text-align: center;
     display: block;
-    margin-bottom: 10px;
+    margin: auto;
 }
 
 /*Fin del diseño de formulario*/
@@ -94,4 +116,5 @@ footer {
     position: fixed;
     bottom: 0;
     width: 100%;
+    height: 65px;
 }
