--- a/bancoapp/web/style.css
+++ b/bancoapp/web/style.css
@@ -35,6 +35,21 @@ form {
     box-shadow: -10px 10px 20px 15px #3a3333;
 }
 
+.nav {
+    font-family: Arial, Helvetica, sans-serif;
+    width: 50%;
+    height: 350px;
+    background-color: #59cc7f;
+    border-top-right-radius: 10px;
+    border-top-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+    border-bottom-left-radius: 10px;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    margin: 70px auto;
+    box-shadow: -10px 10px 20px 15px #3a3333;
+}
+
 /*Todolos los h */
 h1 {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
@@ -79,6 +94,7 @@ input[type="button"]:hover {
 }
 
 label {
+    font-weight: bold;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 16px;
     color: #110627;
